--- a/resetmemo/index.html
+++ b/resetmemo/index.html
@@ -113,7 +113,7 @@
                     showInfo('Your account is already fixed');
                     break;
                 default:
-                    showInfo('Unknown error');
+                    showError('Unknown error');
                     break;
             }
         });
