Rename checker page

--- a/resetmemo/check.html
+++ b/resetmemo/check.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Memo Reset</title>
+    <title>Memo Bug Checker</title>
 
     <link rel='stylesheet prefetch' href='css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='css/main.css'>
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-    <h2>MEMO Reset</h2>
+    <h2>MEMO Bug Checker</h2>
 
     <div id="successLabel" class="alert alert-success">
         MEMO was reset successfully
