--- a/resetmemo/index.html
+++ b/resetmemo/index.html
@@ -50,6 +50,16 @@
 <script type="text/javascript" src="js/memo.js"></script>
 <script type="text/javascript">
 
+    $(document).ready(function() {
+        $(window).keydown(function(event){
+            if(event.keyCode == 13) {
+                event.preventDefault();
+                process();
+                return false;
+            }
+        });
+    });
+
     var resetLabels = function () {
         $('#infoLabel').hide();
         $('#successLabel').hide();
@@ -79,7 +89,10 @@
 
     // RSA
     $('#btn').click(function () {
+        process();
+    });
 
+    var process = function () {
         resetLabels();
 
         var account = $('#account').val();
@@ -117,7 +130,7 @@
                     break;
             }
         });
-    });
+    };
 
 
 </script>
